Added scaffolding for /tick endpoint
